# python-shell

./: .zshrc  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pysh  pysh.py
