[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysh"
version = "1.1.0"
description = "A lightweight Python-based CLI shell"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pygments>=2.20.0",
  "prompt_toolkit>=3.0.40"
]

[project.scripts]
pysh = "pysh:main"
